# course-compass

./: .gitignore  README.md  pyproject.toml
backend/: engine.py  main.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
reports/: eval_results.csv
scripts/: 01_load.py  02_model.py  03_v1_agent.py  04_semantic_test.py  05_v2_agent.py  06_eval.py  semantic.py
semantic_layer/: metrics.yml
