[project]
name = "kellogg-semantic-demo"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.1",
    "matplotlib>=3.11.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]
